[gd_scene load_steps=3 format=3 uid="uid://btbwk8f0x8wn3"]

[ext_resource type="Script" path="res://enemy/enemy_spawner.gd" id="1_8g5xm"]
[ext_resource type="AudioStream" uid="uid://c13wipaeoayhq" path="res://enemy/spawn_rate_increase.wav" id="2_hiha4"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_8g5xm")

[node name="SpawnRateTimer" type="Timer" parent="."]
autostart = true

[node name="RateIncrementTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="SpawnRateIncreaseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_hiha4")

[connection signal="timeout" from="SpawnRateTimer" to="." method="_on_spawn_rate_timer_timeout"]
[connection signal="timeout" from="RateIncrementTimer" to="." method="_on_rate_increment_timer_timeout"]
